 * Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
 * Test assertion util `WagtailPageTestCase.assertCanCreate` now supports the kwarg `publish=True` to check publish redirection (Harry Percival, Akua Dokua Asiedu)
 * Mention the importance of passing `request` and `current_site` to `get_url` on the [performance](performance) documentation page (Jake Howard)
 * Fix: Make sure workflow timeline icons are visible in high-contrast mode (Loveth Omokaro)
 * Fix: Ensure authentication forms (login, password reset) have a visible border in Windows high-contrast mode (Loveth Omokaro)
 * Fix: Ensure visual consistency between buttons and links as buttons in Windows high-contrast mode (Albina Starykova)
 * Fix: references extraction for ChooserBlock (Alex Tomkins)
 * Fix: Incorrectly formatted link in the documentation for Wagtail community support (Bolarinwa Comfort Ajayi)
 * Fix: Text within status tags text will now resize correctly when customizing browser font size (Mary Ojo)
 * Fix: Ensure logo shows correctly on log in page in Windows high-contrast mode (Loveth Omokaro)


4.1 LTS (01.11.2022)
~~~~~~~~~~~~~~~~~~~~

 * New scheduled publishing UI, available from the Status side panel (Sage Abdullah)
 * Allow snippet admin views to be customised via `SnippetViewSet` (Sage Abdullah)
 * Implement scheduled publishing for snippets inheriting from `DraftStateMixin` (Sage Abdullah)
 * Add reference index and usage reports for images, documents and snippets (Karl Hobley, Matt Westcott)
 * Formalised support for Python 3.11 (Matt Westcott)
 * Add basic keyboard control and screen reader support for page listing re-ordering (Paarth Agarwal, Thomas van der Hoeven)
 * Add `PageQuerySet.private` method as an alias of `not_public` (Mehrdad Moradizadeh)
 * Most images in the admin will now only load once they are visible on screen (Jake Howard)
 * Allow setting default attributes on image tags (Jake Howard)