@@ -22,6 +22,7 @@ depth: 1
  * Upgrade to Node 18 for frontend build tooling (LB (Ben) Johnston)
  * Officially recommend `fnm` over `nvm` in development documentation (LB (Ben) Johnston)
  * Mention the importance of passing `request` and `current_site` to `get_url` on the [performance](performance) documentation page (Jake Howard)
+ * Run Python tests with coverage and upload coverage data to codecov (Sage Abdullah)
 
 ### Bug fixes
 
